parser/metamodel/src/test/data/errors/Handler.mm.merr
File: parser/metamodel/src/test/data/badModels/tekgenesis/sales/Handler.mm
(7, 25): HandlerTestError must be an exception enum to be risen
